--- a/.gitignore
+++ b/.gitignore
@@ -55,7 +55,9 @@ _build
 
 # RL-Games
 **/runs/*
-**/logs/*
+**/logs/skrl/SO_100_Cube_Lift_With_Camera/*/params
+**/logs/skrl/SO_100_Cube_Lift_With_Camera/*/videos
+**/logs/skrl/SO_100_Cube_Lift_With_Camera/*/events*
 **/recordings/*
 
 # Pre-Trained Checkpoints
