--- a/source/SO_100_Cube_Lift_With_Camera/SO_100_Cube_Lift_With_Camera/tasks/manager_based/so_100_cube_lift_with_camera/agents/skrl_ppo_cfg.yaml
+++ b/source/SO_100_Cube_Lift_With_Camera/SO_100_Cube_Lift_With_Camera/tasks/manager_based/so_100_cube_lift_with_camera/agents/skrl_ppo_cfg.yaml
@@ -18,12 +18,11 @@ models:
       layers:
         - conv2d: {out_channels: 32, kernel_size: 8, stride: 4, padding: 0}
         - conv2d: {out_channels: 64, kernel_size: 4, stride: 2, padding: 0}
-        - conv2d: {out_channels: 64, kernel_size: 3, stride: 1, padding: 0}
         - flatten
       activations: relu
     - name: net
       input: features_extractor
-      layers: [256, 128, 64]
+      layers: [256, 64]
       activations: elu
     output: ACTIONS
   value:  # see deterministic_model parameters
@@ -35,12 +34,11 @@ models:
       layers:
         - conv2d: {out_channels: 32, kernel_size: 8, stride: 4, padding: 0}
         - conv2d: {out_channels: 64, kernel_size: 4, stride: 2, padding: 0}
-        - conv2d: {out_channels: 64, kernel_size: 3, stride: 1, padding: 0}
         - flatten
       activations: relu
     - name: net
       input: features_extractor
-      layers: [256, 128, 64]
+      layers: [256, 64]
       activations: elu
     output: ONE
 
