--- a/source/SO_100_Cube_Lift_With_Camera/SO_100_Cube_Lift_With_Camera/tasks/manager_based/so_100_cube_lift_with_camera/agents/skrl_ppo_cfg.yaml
+++ b/source/SO_100_Cube_Lift_With_Camera/SO_100_Cube_Lift_With_Camera/tasks/manager_based/so_100_cube_lift_with_camera/agents/skrl_ppo_cfg.yaml
@@ -15,7 +15,7 @@ models:
     network:
       - name: net
         input: STATES
-        layers: [512, 256, 128, 64]
+        layers: [512, 512, 256, 128]  # Deeper network for complex gripping task
         activations: elu
     output: ACTIONS
   value:  # see deterministic_model parameters
@@ -24,7 +24,7 @@ models:
     network:
       - name: net
         input: STATES
-        layers: [512, 256, 128, 64]
+        layers: [512, 512, 256, 128]  # Deeper network for complex gripping task
         activations: elu
     output: ONE
 
@@ -39,12 +39,12 @@ memory:
 # https://skrl.readthedocs.io/en/latest/api/agents/ppo.html
 agent:
   class: PPO
-  rollouts: 16
-  learning_epochs: 8
-  mini_batches: 4
+  rollouts: 32  # Increased from 16 for better exploration
+  learning_epochs: 10  # Increased from 8 for better learning
+  mini_batches: 8  # Increased from 4 for better gradient estimates
   discount_factor: 0.99
   lambda: 0.95
-  learning_rate: 1.0e-03
+  learning_rate: 3.0e-04  # Slightly lower for stability
   learning_rate_scheduler: KLAdaptiveLR
   learning_rate_scheduler_kwargs:
     kl_threshold: 0.01
@@ -58,7 +58,7 @@ agent:
   ratio_clip: 0.2
   value_clip: 0.2
   clip_predicted_values: True
-  entropy_loss_scale: 0.001
+  entropy_loss_scale: 0.005  # Increased from 0.001 for better exploration
   value_loss_scale: 2.0
   kl_threshold: 0.0
   rewards_shaper_scale: 0.01
